Issue #16155: migration to nio jdk api